--- a/react-lecture/missions/index.html
+++ b/react-lecture/missions/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="./chapter09.js"></script>
+        <script src="./day02/quiz.js"></script>
     </head>
     <body>
         hi
