Day4 학습 - 23/99강 수강 완료 - day04 미션 완료

--- a/react-lecture/section01/index.html
+++ b/react-lecture/section01/index.html
@@ -1,8 +1,9 @@
 <html>
     <head>
-        <script src="./chapter14.js"></script>
+        <script src="./chapter17.js"></script>
     </head>
     <body>
-        hi
+        section01
     </body>
 </html>
+
