--- a/react-lecture/missions/index.html
+++ b/react-lecture/missions/index.html
@@ -1,8 +1,9 @@
 <html>
     <head>
-        <script src="./day05/quiz.js"></script>
+        <script src="./day06/quiz04.js"></script>
     </head>
     <body>
-        hi
+        quiz
     </body>
 </html>
+
